<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/add_item_title"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="Add Item"
            android:gravity="center"
            android:textSize="25dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Item Name:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="Name">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Description:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="Description">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Serial: (Optional)"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/serial_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="Serial">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/scan_barcode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="Capture Barcode" />

            <Button
                android:id="@+id/parse_barcode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="Scan Barcode" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Model:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/model_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="Model">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Make:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/make_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="Make">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Date:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/date_added"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="MM/DD/YYYY"
                android:textSize="25dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tags:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/input_tag_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter tag"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/add_tags_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="Add Tag" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!-- Chips can be added here -->
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Price: $"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:hint="$$$$.$$">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Comments:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/comments_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="Comments">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Photos:"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#2196F3"
                android:text="Gallery" />

            <Button
                android:id="@+id/camera_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#2196F3"
                android:text="Camera" />
        </LinearLayout>
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="150dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/delete_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:backgroundTint="#2196F3"
            android:text="Delete Photo" />

    </LinearLayout>
</ScrollView>