...
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/down_arrow" />

            <Button
                android:id="@+id/filter_items_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/hamburger_menu" />
        </LinearLayout>

...
            android:layout_weight="1"
            android:translationY="3dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
...
