...
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/filter_keywords_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter Keyword"
                android:layout_marginRight="10dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/add_keyword_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="Add" />
        </LinearLayout>
        <LinearLayout
...
